--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,13 @@
 body {
   margin: 0;
-  font-family: Arial, sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 .main {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  color:#1f2937;
 }
 
 .header,
@@ -18,31 +19,154 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0 0 20px 20px;
+  padding: 24px 24px 48px 48px;
 }
 
-/* Optional: give each section a different background to visualize */
+
 .header {
-  background-color: #1f2937;
+    background-color: #1f2937;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: #e5e7eb;
+    font-size: 24px;
+}
+.header-right, .header-left {
+    display: flex;
+}
+a {
+    text-decoration: none;
+    color: white;
 }
 
 .title {
   background-color: #1f2937;
+  display: flex;
+  color: #f9faf8;
+  justify-content: space-between;
+  align-items: center;
+}
+.title-left {
+    display: flex;
+    flex-direction: column;
+    font-size: 48px;
+    margin: 0;
+}
+.title-left p {
+    display: flex;
+    font-size: 18px;
+    margin: 10px 0;
+}
+.signup {
+    background-color: #3882f6;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    font-size: 18px;
+    color: #f9faf8;
+}
+.title-right {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex: 1;
+}
+.image {
+    width: 300px;
+    height: 150px;
+    background-color: #aaa;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color:  #f9faf8;
+    flex: auto;
 }
 
 .content {
-  background-color: #f9faf8;
-  flex: 1; /* this makes content expand if there's extra space */
+    background-color: #f9faf8;
+    flex: 1; /* this makes content expand if there's extra space */
+}
+.content-inner {
+    font-size: 36px;
+    font-weight: 900;
+    text-align: center;
+    width: 100%;
+    margin-bottom: 20px;
+}
+.info-boxes {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    flex-wrap: wrap;
+    font-size: 18px;
+    font-weight: 100;
+}
+
+.info-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 120px;
+}
+
+.info-box {
+    width: 100px;
+    height: 100px;
+    border: 2px solid #3882f6;
+    border-radius: 10px;
+    margin-bottom: 10px;
 }
 
 .quote {
-  background-color: #e5e7eb;
+    background-color: #e5e7eb;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.quote-text {
+    text-align: left;
+    font-style: italic;
+    font-size: 36px;
+}
+.quote-author {
+    text-align: right;
+    font-weight: bold;
 }
 
 .popup {
-  background-color: #f9faf8;
+    background-color: #f9faf8;
+    display: flex;
+    justify-content: center;
+}
+.popup-box {
+    background-color: #3882f6;
+    color: #e5e7eb;
+    border-radius: 10px;
+    padding: 30px;
+    width: 80%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.popup-left h3 {
+  margin: 0 0 10px 0;
+}
+
+.signup-filled {
+  background-color: #3882f6;
+  color: #f9faf8;
+  padding: 10px 20px;
+  border: 2px solid #f9faf8;
+  border-radius: 8px;
+  cursor: pointer;
+  font-size: 14px;
+  width: 110%;
 }
 
 .footer {
-  background-color: #1f2937;
+    background-color: #1f2937;
+    color: #e5e7eb;
+    font-size: 18px;
 }
