--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+html, body {
+  width: 100%;
+}
+
 body {
   margin: 0;
   font-family: "Roboto", sans-serif;
@@ -33,44 +37,72 @@ body {
 }
 .header-right, .header-left {
     display: flex;
+    gap: 24px;
 }
 a {
     text-decoration: none;
     color: white;
+    font-weight: lighter;
+    display: flex;
 }
 
 .title {
-  background-color: #1f2937;
-  display: flex;
-  color: #f9faf8;
-  justify-content: space-between;
-  align-items: center;
+    background-color: #1f2937;
+    display: flex;
+    color: #f9faf8;
+    justify-content: space-between;
+    align-items: center;
+}
+.title-inner {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 40px;
+}
+.title-left, .title-right {
+  flex: 1 1 300px;
 }
 .title-left {
     display: flex;
     flex-direction: column;
     font-size: 48px;
     margin: 0;
+    padding-right: 36px;
+    gap: 10px
+}
+.title-left h1 {
+    display: flex;
+    margin: 0;
 }
 .title-left p {
     display: flex;
     font-size: 18px;
-    margin: 10px 0;
+    margin: 10px;
 }
 .signup {
     background-color: #3882f6;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
     padding: 10px 20px;
+    margin-left: 8px;
     border: none;
     border-radius: 8px;
     cursor: pointer;
     font-size: 18px;
     color: #f9faf8;
+    width: 180px;
 }
 .title-right {
     display: flex;
     align-items: center;
     justify-content: center;
-    flex: 1;
+    /* flex: 1;
+    flex-shrink: 0;
+    flex-grow: 0;
+    flex-basis: auto; */
 }
 .image {
     width: 300px;
@@ -78,9 +110,9 @@ a {
     background-color: #aaa;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
     color:  #f9faf8;
-    flex: auto;
+    /* flex: auto; */
 }
 
 .content {
@@ -113,7 +145,7 @@ a {
 .info-box {
     width: 100px;
     height: 100px;
-    border: 2px solid #3882f6;
+    border: 3px solid #3882f6;
     border-radius: 10px;
     margin-bottom: 10px;
 }
@@ -143,7 +175,7 @@ a {
     background-color: #3882f6;
     color: #e5e7eb;
     border-radius: 10px;
-    padding: 30px;
+    padding: 30px 60px 30px 60px;
     width: 80%;
     display: flex;
     justify-content: space-between;
@@ -161,12 +193,16 @@ a {
   border: 2px solid #f9faf8;
   border-radius: 8px;
   cursor: pointer;
-  font-size: 14px;
-  width: 110%;
+  font-size: 18px;
+  width: 180px;
 }
 
 .footer {
+    display: flex;
     background-color: #1f2937;
     color: #e5e7eb;
+    height: 80px;
     font-size: 18px;
+    margin: 0;
+    padding: 0;
 }
